Fri Sep  5 13:59:55 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/valgrind.supp:
          And also exclude ls as tool

Fri Sep  5 11:25:38 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/valgrind.supp:
          ps/gro/bash are in some linux flavors installed under /bin
          and in some /usr/bin

Fri Sep  5 08:11:27 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/valgrind.supp:
          Suppress leaks coming from ps/perl/grep/bash, we aren't
          interested in those

Fri Sep  5 07:41:02 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/valgrind.supp:
          Improved suppress file for TAO

Fri Sep  5 06:42:24 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/valgrind.supp:
          Suppress all leaks in ps/bash/grep

Thu Sep  4 16:41:40 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * apps/JAWS3/contrib/john_at_lyris_dot_com/jaws3-cntlC.code:
        * examples/NT_Service/main.cpp:
          Another attempt to fix the control handler function signature

Thu Sep  4 09:00:56 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * apps/JAWS3/contrib/john_at_lyris_dot_com/jaws3-cntlC.code:
        * examples/NT_Service/main.cpp:
          Corrected control handler function signature

Thu Sep  4 08:57:02 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/os_stropts.h:
          Give struct strrecvfd a dummy member, empty structs have
          undefined behavior and trigger a huge amount of warnings
          with clang. This also fixes bugzilla 4150, thanks to
          Yogesh Sharma <Yogesh dot Sharma at saabusa dot com> for
          reporting this.

        * tests/Compiler_Features_32_Test.cpp:
          Extended this unit test and add some external references

Fri Aug 29 11:32:31 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Event_Handler.h:
        * ace/Event_Handler.cpp: